--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a053878
-	base = 7093d90
+	base = c233287
 	trim = rclc
-	trimbase = 
+	trimbase = 7093d90
