--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a053878
-	base = 109d732
+	base = 950aeac
 	trim = rclc_examples
-	trimbase = 
+	trimbase = 109d732
