--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a053878
-	base = ecd0415
+	base = d85ce0c
 	trim = rclc_lifecycle
-	trimbase = 
+	trimbase = ecd0415
