--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a053878
-	base = b187788
+	base = ce96ac1
 	trim = rclc_parameter
-	trimbase = 
+	trimbase = b187788
